--- a/IdentityTest/Views/Users/Index.cshtml
+++ b/IdentityTest/Views/Users/Index.cshtml
@@ -12,7 +12,7 @@
 		<th>Email</th>
 		<th>Role</th>
 		<th>Update</th>
-		<th>Change Password</th>
+		<th>Assign Role</th>
 		<th>Delete</th>
 		
 	</tr>
@@ -22,18 +22,19 @@
 			<td>@user.Id</td>
 			<td>@user.Email</td>
 			<td>
-				Role
+				role
 			</td>
 			<td>
 				<a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@user.Id">
 					Update
 				</a>
 			</td>
-			<td>
-				<a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">
-					Change Password
+			<th>
+				<a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="EditUserRoles"
+				asp-route-id="@user.Id">
+					Assign Role
 				</a>
-			</td>
+			</th>
 			<td>
                 <form asp-action="Delete" asp-route-id="@user.Id" method="post">
                     <button type="submit" class="btn btn-sm btn-danger">
