--- a/IdentityTest/Views/Roles/EditUserRoles.cshtml
+++ b/IdentityTest/Views/Roles/EditUserRoles.cshtml
@@ -7,25 +7,27 @@
 <a asp-controller="Users" asp-action="Index" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 <div class="container-xxl">
-	<label asp-for="userEmail"> userEmail </label>
+	<label asp-for="userEmail"> @Model.userEmail </label>
 </div>
 <div>
 	<form asp-action="EditUserRoles" method="post">
-		@foreach (string roleNames in Model.rolesToBe)
+		@foreach (string roleNames in @Model.rolesToBe)
 		{
 			<div>
 				<select class="form-select" aria-label="Roles">
 					<option selected>Choose a Role</option>
-					<option value="@roleNames">@roleNames</option>
+					<option value="userRoleName">@roleNames</option>
 				</select>
 			</div>
 		}
-		<button type="submit" class="btn btn-primary">Save</button>
+		<div>
+			<button type="submit" class="btn btn-primary">Save</button>
+		</div>		
 	</form>
 </div>
 <div>
 	<div class="container-xxl">
-		<label asp-for="userRoleName" > userRoleName </label>
+		<label asp-for="userRoleName" > @Model.userRoleName </label>
 	</div>
 	<form asp-action="EditUserRoles" method="delete">
 		<button type="submit" class="btn btn-sm btn-danger">Remove from role</button>
