--- a/IdentityTest/Views/Shared/_Layout.cshtml
+++ b/IdentityTest/Views/Shared/_Layout.cshtml
@@ -29,13 +29,19 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark " asp-area="" asp-controller="Users" asp-action="Index">Index</a>
+                                <a class="nav-link text-dark " asp-area="" asp-controller="Account" asp-action="Index">User Index</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark " asp-area="" asp-controller="Roles" asp-action="Index">Roles Index</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark " asp-area="" asp-controller="Claim" asp-action="Index">Claim Index</a>
                             </li>
 
                         </ul>
                         <ul class="navbar-nav ms-auto">
                            <li class="nav-item">
-                              <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
+                              <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                            </li>
                            <li class="nav-item">
                                <a class="nav-item text-dark">@User.Identity.Name</a>
@@ -53,10 +59,10 @@
                         </ul>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-dark ms-auto" asp-area="" asp-controller="Users" asp-action="Login">Login</a>
+                                <a class="nav-link text-dark ms-auto" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark ms-auto" asp-area="" asp-controller="Users" asp-action="Register">Register</a>
+                                <a class="nav-link text-dark ms-auto" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                             </li>
                         </ul>
                     }
