--- a/IdentityTest/Views/Account/Index.cshtml
+++ b/IdentityTest/Views/Account/Index.cshtml
@@ -12,6 +12,7 @@
 		<th>Email</th>
 		<th>Roles</th>
 		<th>Update</th>
+		<th>Claims</th>
 		<th>Assign Role</th>
 		<th>Delete</th>
 		
@@ -27,18 +28,33 @@
 					Update
 				</a>
 			</td>
-			<th>
+			<td>
+				<a class="btn btn-sm btn-primary" asp-controller="Claim" asp-action="Index" asp-route-id="@user.Id">
+					Claims
+				</a>
+			</td>
+			<td>
 				<a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="EditUserRoles"
 				asp-route-id="@user.Id">
 					Assign Role
 				</a>
-			</th>
+			</td>
 			<td>
-                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Delete
-                    </button>
-                </form>
+				@if(User.Identity != null && User.Identity.Name != user.UserName){
+					<form asp-action="Delete" asp-route-id="@user.Id" method="post">
+						<button type="submit" class="btn btn-sm btn-danger">
+							Delete
+						</button>
+					</form>
+				}
+				else if (User.Identity != null && User.Identity.Name == user.UserName)
+				{
+					<form>
+						<button type="submit" class="btn btn-sm btn-danger" disabled>
+							Delete
+						</button>
+					</form>
+				}
             </td>
 		</tr>
 	}
