--- a/IdentityTest/Views/Claim/Create.cshtml
+++ b/IdentityTest/Views/Claim/Create.cshtml
@@ -1,19 +1,20 @@
-﻿@{
+﻿@model IdentityTest.Web.ViewModels.CreateClaimViewModel;
+@{
     ViewData["Title"] = "CREATE CLAIM";
 }
 
 <h1 class="bg-info text-white">Create Claim</h1>
-<a asp-action="Index" class="btn btn-secondary">Back</a>
+<a asp-action="Index" asp-route-id="@Model.UserId" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form method="post">
     <div class="form-group">
-        <label for="ClaimType">Claim Type:</label>
-        <input name="ClaimType" class="form-control" />
+        <label  asp-for="ClaimType">Claim Type:</label>
+        <input  asp-for="ClaimType" name="ClaimType" class="form-control" />
     </div>
     <div class="form-group">
-        <label for="ClaimValue">Claim Value:</label>
-        <input name="ClaimValue" class="form-control" />
+        <label asp-for="ClaimValue">Claim Value:</label>
+        <input asp-for="ClaimValue" name="ClaimValue" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
