--- a/IdentityTest/Views/Claim/Index.cshtml
+++ b/IdentityTest/Views/Claim/Index.cshtml
@@ -2,38 +2,39 @@
 @{
     ViewData["Title"] = "CLAIMS";
 }
-
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <h2 class="bg-primary m-1 p-1 text-white">Claims</h2>
 <a asp-action="Create" asp-route-Id="@Model.UserId" class="btn btn-secondary">Create a Claim</a>
 
-<table class="table table-sm table-bordered">
-    <tr>
-        <th>Subject</th>
-        <th>Issuer</th>
-        <th>Type</th>
-        <th>Value</th>
-        <th>Delete</th>
-    </tr>
-    @if(Model.Claims != null){
-        @foreach (var claim in Model.Claims.OrderBy(x => x.ClaimType))
-        {
-            <tr>
-                <td>@claim.ClaimSubject</td>
-                <td>@claim.ClaimIssuer</td>
-                <td>@claim.ClaimType</td>
-                <td>@claim.ClaimValue</td>
-                <td>
-                    <a asp-action="Delete" asp-route-Id="@Model.UserId" class="btn btn-danger">
-                        <input type="hidden" name="claimValues" value="@claim.ClaimType;@claim.ClaimValue;@claim.ClaimIssuer" />
-                        Remove
-                    </a>
-                </td>
-            </tr>
-        }               
-    }
-    else
+@if (Model.Claims != null)
+{
+    <table class="table table-sm table-bordered">
+        <tr>
+            <th>Subject</th>
+            <th>Issuer</th>
+            <th>Type</th>
+            <th>Value</th>
+            <th>Delete</th>
+        </tr>
+    @foreach (var claim in Model.Claims.OrderBy(x => x.ClaimType))
     {
-        <p>Oh, Wooow, such empty, you should add more infor!</p>
+       <tr>
+           <td>@claim.ClaimSubject</td>
+           <td>@claim.ClaimIssuer</td>
+           <td>@claim.ClaimType</td>
+           <td>@claim.ClaimValue</td>
+           <td>
+              <a asp-action="Delete" asp-route-userId="@Model.UserId" asp-route-claimType ="@claim.ClaimType"
+              class="btn btn-danger">
+                Remove
+              </a>
+           </td>
+       </tr>
+        
     }
-
-</table>
+    </table>
+}
+else
+{
+    <p>Oh, Wooow, such empty, you shuld</p>
+}
