--- a/IdentityTest/Views/Roles/DeleteUserRoles.cshtml
+++ b/IdentityTest/Views/Roles/DeleteUserRoles.cshtml
@@ -7,7 +7,7 @@
 
 
 <h1 class="bg-info text-white">Confirm remove</h1>
-<a asp-action="EditUserRoles" asp-route-id="@Model.UserId" class="btn btn-secondary">Back</a>
+<a asp-action="EditUserRoles" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="DeleteUserRoles" method="post">
