--- a/IdentityTest/Views/Claim/Delete.cshtml
+++ b/IdentityTest/Views/Claim/Delete.cshtml
@@ -10,7 +10,7 @@
 <a asp-action="Index" asp-route-id="@Model.UserId" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
-<form asp-action="Delete" method="post">
+<form asp-action="Delete" asp-route-id="@Model.UserId"  method="post">
 
     <div class="form-group">
         <label asp-for="UserEmail"> User Email</label>
@@ -21,11 +21,6 @@
         <label asp-for="ClaimType"> Claim Type to be remove</label>
         <input asp-for="ClaimType" class="form-control" disabled />
     </div>
-
-    <div class="form-group">
-        <label asp-for="ClaimValue"> Claim Type to be remove</label>
-        <input asp-for="ClaimValue" class="form-control" disabled />
-    </div>
-
+    
     <button type="submit" class="btn btn-danger">Confirm Remove</button>
 </form>
