--- a/IdentityTest/Views/Account/Register.cshtml
+++ b/IdentityTest/Views/Account/Register.cshtml
@@ -19,13 +19,13 @@
 
             <div class="form-group">
                 <label asp-for="Password" title="Password">Password</label>
-                <input asp-for="Password" class="form-control" />
+                <input type="password" asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="PasswordConfirm" title=" PasswordConfirm">Password</label>
-                <input asp-for="PasswordConfirm" class="form-control" />
+                <input type = "password" asp-for="PasswordConfirm" class="form-control" />
                 <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
             </div>
 
