--- a/IdentityTest/Views/Account/ChangePassword.cshtml
+++ b/IdentityTest/Views/Account/ChangePassword.cshtml
@@ -1,5 +1,5 @@
-﻿@using IdentityTest.Web.ViewModels
-@model IdentityTest.Models.ApplicationUser;
+﻿
+@model IdentityTest.Web.ViewModels.ChangePasswordViewModel;
 @{
 	ViewData["Title"] = "Change Password";
 }
@@ -9,18 +9,18 @@
 
 <form asp-action="ChangePassword" method="post">
 	<div class="form-group">
-		<label asp-for="Id"></label>
-		<input asp-for="Id" class="form-control" disabled />
+		<label asp-for="UserId"></label>
+		<input asp-for="UserId" class="form-control" disabled />
 		
 	</div>
 	<div class="form-group">
 		<label for="Password">Password</label>
-		<input name="Password" class="form-control" />
+		<input  type = "password" name="Password" class="form-control" />
 	</div>
 
 	<div class="form-group">
 		<label for="PasswordConfirm">confirm password</label>
-		<input name="PasswordConfirm" class="form-control" />
+		<input type="password" name="ConfirmPassword" class="form-control" />
 	</div>
 	<button type="submit" class="btn btn-primary">Save</button>
 </form>
