Index de usuario terminado

--- a/IdentityTest/Views/Account/ChangePassword.cshtml
+++ b/IdentityTest/Views/Account/ChangePassword.cshtml
@@ -5,13 +5,12 @@
 }
 
 <h1 class="bg-info text-white">Change Password</h1>
-<a asp-action="Index" class="btn btn-secondary">Back</a>
+<a asp-action="Index" asp-route-UserId="@Model.UserId" class="btn btn-secondary">Back</a>
 
 <form asp-action="ChangePassword" method="post">
 	<div class="form-group">
-		<label asp-for="UserId"></label>
-		<input asp-for="UserId" class="form-control" disabled />
-		
+		<label asp-for="Email">@Model.Email</label>
+
 	</div>
 	<div class="form-group">
 		<label for="Password">Password</label>
