--- a/IdentityTest/Views/Account/Login.cshtml
+++ b/IdentityTest/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
+        <input type="password" asp-for="Password" class="form-control" />
     </div>
 
     <button class="btn btn-primary" type="submit">Log In</button>
