--- a/IdentityTest/Views/Account/Register.cshtml
+++ b/IdentityTest/Views/Account/Register.cshtml
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="PasswordConfirm" title=" PasswordConfirm">Password</label>
+                <label asp-for="PasswordConfirm" title=" PasswordConfirm">Confirm Password</label>
                 <input type = "password" asp-for="PasswordConfirm" class="form-control" />
                 <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
             </div>
