--- a/IdentityTest/Views/Account/Update.cshtml
+++ b/IdentityTest/Views/Account/Update.cshtml
@@ -4,14 +4,10 @@
 }
 
 <h1 class="bg-info text-white">Update User</h1>
-<a asp-action="Index" class="btn btn-secondary">Back</a>
+<a asp-action="UserIndex" asp-route-id="@Model.UserId" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="Update" method="post">
-	<div class="form-group">
-		<label asp-for="UserId">User Id</label>
-		<input asp-for="UserId" class="form-control" disabled />
-	</div>
 	<div class="form-group">
         <label asp-for="UserEmail" title="UserEmail">User Email</label>
 		<input asp-for="UserEmail" class="form-control" />
