--- a/IdentityTest/Views/Account/ChangePassword.cshtml
+++ b/IdentityTest/Views/Account/ChangePassword.cshtml
@@ -4,13 +4,15 @@
 	ViewData["Title"] = "Change Password";
 }
 
+<div class="alert alert-danger">
+	<p>@ViewBag.ErrorMessage</p>
+</div>
 <h1 class="bg-info text-white">Change Password</h1>
 <a asp-action="Index" asp-route-UserId="@Model.UserId" class="btn btn-secondary">Back</a>
 
 <form asp-action="ChangePassword" method="post">
 	<div class="form-group">
 		<label asp-for="Email">@Model.Email</label>
-
 	</div>
 	<div class="form-group">
 		<label for="Password">Password</label>
