--- a/IdentityTest/Views/Account/Update.cshtml
+++ b/IdentityTest/Views/Account/Update.cshtml
@@ -5,7 +5,10 @@
 
 <h1 class="bg-info text-white">Update User</h1>
 <a asp-action="UserIndex" asp-route-id="@Model.UserId" class="btn btn-secondary">Back</a>
-<div asp-validation-summary="All" class="text-danger"></div>
+
+<div class="alert alert-danger">
+  <p>@ViewBag.ErrorMessage</p>
+</div>
 
 <form asp-action="Update" method="post">
 	<div class="form-group">
@@ -15,22 +18,18 @@
     <div class="form-group">
         <label asp-for="UserFirstName" title="FirstName">First Name</label>
         <input asp-for="UserFirstName" class="form-control" />
-        <span asp-validation-for="UserFirstName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="UserLastName" title="UserLastName">User Lastname</label>
         <input asp-for="UserLastName" class="form-control" />
-        <span asp-validation-for="UserLastName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="UserAddress" title="UserAdress">Adress</label>
         <input asp-for="UserAddress" class="form-control" />
-        <span asp-validation-for="UserAddress" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="UserPhoneNumber" title="UserPhoneNumber">PhoneNumber</label>
         <input asp-for="UserPhoneNumber" class="form-control" />
-        <span asp-validation-for="UserPhoneNumber" class="text-danger"></span>
     </div>
 	<button type="submit" class="btn btn-primary">Save</button>
 </form>
