--- a/IdentityTest/Views/Roles/Update.cshtml
+++ b/IdentityTest/Views/Roles/Update.cshtml
@@ -6,12 +6,14 @@
 
 <h1 class="bg-info text-white">Update User</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
-<div asp-validation-summary="All" class="text-danger"></div>
+
+<div class="alert alert-danger">
+	<p>@ViewBag.ErrorMessage</p>
+</div>
 
 <form asp-action="Update" method="post">
 	<div class="form-group">
-		<label asp-for="Id"></label>
-		<input asp-for="Id" class="form-control" disabled />
+		<label asp-for="Id">@Model.Id</label>
 	</div>
 	<div class="form-group">
 		<label asp-for="Name">Role Name</label>
