Role Claim index agregado, tambien pantalla de confirmacion de borrado de role

--- a/IdentityTest/Views/Account/ChangePassword.cshtml
+++ b/IdentityTest/Views/Account/ChangePassword.cshtml
@@ -3,10 +3,13 @@
 @{
 	ViewData["Title"] = "Change Password";
 }
+@if (!string.IsNullOrEmpty(@ViewBag.ErrorMessage))
+{
+    <div class="alert alert-danger">
+        <p>@ViewBag.ErrorMessage</p>
+    </div>
+}
 
-<div class="alert alert-danger">
-	<p>@ViewBag.ErrorMessage</p>
-</div>
 <h1 class="bg-info text-white">Change Password</h1>
 <a asp-action="Index" asp-route-UserId="@Model.UserId" class="btn btn-secondary">Back</a>
 
