--- a/IdentityTest/Views/Roles/Update.cshtml
+++ b/IdentityTest/Views/Roles/Update.cshtml
@@ -7,9 +7,13 @@
 <h1 class="bg-info text-white">Update User</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
 
-<div class="alert alert-danger">
-	<p>@ViewBag.ErrorMessage</p>
-</div>
+@if (!string.IsNullOrEmpty(@ViewBag.ErrorMessage))
+{
+    <div class="alert alert-danger">
+        <p>@ViewBag.ErrorMessage</p>
+    </div>
+}
+
 
 <form asp-action="Update" method="post">
 	<div class="form-group">
