--- a/IdentityTest/Views/Account/Login.cshtml
+++ b/IdentityTest/Views/Account/Login.cshtml
@@ -5,9 +5,13 @@
 
 <h1 class="bg-info text-white">Login</h1>
 
-<div class="alert alert-danger">
-    <p>@ViewBag.ErrorMessage</p>
-</div>
+@if (!string.IsNullOrEmpty(@ViewBag.ErrorMessage))
+{
+    <div class="alert alert-danger">
+        <p>@ViewBag.ErrorMessage</p>
+    </div>
+}
+
 
 <form asp-action="Login" method="post">
     <div class="form-group">
