--- a/IdentityTest/Views/Account/Update.cshtml
+++ b/IdentityTest/Views/Account/Update.cshtml
@@ -6,9 +6,12 @@
 <h1 class="bg-info text-white">Update User</h1>
 <a asp-action="UserIndex" asp-route-id="@Model.UserId" class="btn btn-secondary">Back</a>
 
-<div class="alert alert-danger">
-  <p>@ViewBag.ErrorMessage</p>
-</div>
+@if (!string.IsNullOrEmpty(@ViewBag.ErrorMessage))
+{
+    <div class="alert alert-danger">
+        <p>@ViewBag.ErrorMessage</p>
+    </div>
+}
 
 <form asp-action="Update" method="post">
 	<div class="form-group">
