--- a/IdentityTest/Views/Roles/Index.cshtml
+++ b/IdentityTest/Views/Roles/Index.cshtml
@@ -8,7 +8,7 @@
 <a asp-action="Create" class="btn btn-secondary">Create a Role</a>
   
 <table class="table table-sm table-bordered table-bordered">
-    <tr><th>ID</th><th>Name</th>><th>Update</th><th>Delete</th></tr>
+    <tr><th>ID</th><th>Name</th><th>Update</th><th>Claims</th><th>Delete</th></tr>
     @foreach (var role in Model)
     {
         <tr>
@@ -16,12 +16,14 @@
             <td>@role.Name</td>
             <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
             <td>
-                
-                <form asp-action="Delete" asp-route-id="@role.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Delete
-                    </button>
-                </form>
+                <a class="btn btn-sm btn-primary" asp-controller="RoleClaim" asp-action="Index" asp-route-id="@role.Id">
+                    Claims
+                </a>
+            </td>
+            <td>
+                <a asp-action="RoleDelete" asp-route-id="@role.Id" class="btn btn-sm btn-danger">
+                    Delete
+                </a>
             </td>
         </tr>
     }
